# helix-pilot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  mcpo_config.json  pyproject.toml  server.py  vellaveto.toml
.github/workflows/: ci.yml
config/: helix_pilot.json  helix_pilot_test_fullscreen.json
docs/: content_strategy.md
docs/articles/: devto_windows_gui_mcp.md  hn_first_comment.md  hn_show_hn.md  qiita_hands_on.md  reddit_localllama.md  reddit_localllama_v2.md  x_thread.md  zenn_article.md
docs/demo/: architecture.html  demo_output.json  list_windows_output.json  mcp_terminal_demo.html  status_output.json
screenshots/: create_terminal_gif.py  demo_capture.py
scripts/: helix_pilot.py  mem0_mcp_bridge.py
scripts/scenarios/demo_capture_v2/: README.md  all_tabs_stills.json  hero_soloai.json  mixai_5phase.json  virtual_desktop_sandbox.json  web_ui_browser.json
src/: __init__.py
src/pilot/: __init__.py
src/tools/: __init__.py  helix_pilot_tool.py  pilot_action_contract.py  pilot_response_processor.py  pilot_worker.py
tests/: conftest.py  test_action_validator.py  test_config.py  test_lock_manager.py  test_output_formatter.py  test_pilot_action_contract.py  test_pilot_response_processor.py  test_pilot_runtime_helpers.py  test_safety.py  test_screen_cache.py  test_server.py
