[project]
name = "helix-pilot"
version = "0.1.0"
description = "GUI automation MCP server powered by local Vision LLM (Ollama)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "tsunamayo7" },
]
keywords = ["mcp", "gui-automation", "ollama", "vision-llm", "windows"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "numpy",
  "pillow",
  "pyautogui",
  "pygetwindow",
]

[project.optional-dependencies]
clipboard = ["pyperclip"]
monitor = ["pynput"]
dev = ["pytest", "ruff"]

[project.scripts]
helix-pilot = "server:mcp.run"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
