[project]
name = "helix-pilot"
version = "2.0.0"
description = "GUI automation MCP server powered by local Vision LLM (Ollama)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "tsunamayo7" },
]
keywords = ["mcp", "gui-automation", "ollama", "vision-llm", "windows"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "numpy",
  "pillow",
  "pyautogui",
  "pygetwindow",
]

[project.urls]
Homepage = "https://github.com/tsunamayo7/helix-pilot"
Repository = "https://github.com/tsunamayo7/helix-pilot"
Issues = "https://github.com/tsunamayo7/helix-pilot/issues"

[project.optional-dependencies]
clipboard = ["pyperclip"]
monitor = ["pynput"]

[project.scripts]
helix-pilot = "server:mcp.run"

[dependency-groups]
dev = ["pytest", "pytest-timeout", "ruff", "build>=1.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
